Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = \"Itali\"\n",
+    "italy = \"Sal\"\n",
     "italy"
    ]
   },
