--- a/index.ipynb
+++ b/index.ipynb
@@ -127,22 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Salina Island'"
+       "'Italy'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "italy = \"Salina Island\"\n",
+    "italy = \"Italy\"\n",
     "italy"
    ]
   },
