Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = []\n",
+    "kindof_neighbors = ['USA',\n",
+    " 'Argentina',\n",
+    " 'Mexico','USA']\n",
     "kindof_neighbors"
    ]
   },
