Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "kindof_neighbors = ['USA', 'Argentina', 'Mexico','USA']\n",
+    "kindof_neighbors = ['USA', 'Argentina', 'Mexico', 'USA']\n",
     "kindof_neighbors"
    ]
   },
@@ -251,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "kindof_neighbors.append(\"Malta\")"
    ]
   },
   {
