--- a/index.ipynb
+++ b/index.ipynb
@@ -247,11 +247,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta', 'Malta']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors.append(\"Malta\")"
+    "kindof_neighbors.append(\"Malta\")\n",
+    "kindof_neighbors"
    ]
   },
   {
