--- a/index.ipynb
+++ b/index.ipynb
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "kindof_neighbors.append(\"Thailand\")"
    ]
   },
   {
