Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -275,11 +275,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta', 'Malta', 'Thailand', 'Thailand']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors.append(\"Thailand\")"
+    "kindof_neighbors.append(\"Thailand\")\n",
+    "kindof_neighbors"
    ]
   },
   {
