Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,16 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['USA', 'Argentina', 'Mexico', 'USA', 'Malta', 'Malta']"
+       "['USA',\n",
+       " 'Argentina',\n",
+       " 'Mexico',\n",
+       " 'USA',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Thailand',\n",
+       " 'Thailand',\n",
+       " 'Malta',\n",
+       " 'Malta',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
