--- a/index.ipynb
+++ b/index.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here"
+    "countries[]"
    ]
   },
   {
