--- a/index.ipynb
+++ b/index.ipynb
@@ -351,11 +351,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries[]"
+    "countries[6]=\"USA\""
    ]
   },
   {
