--- a/index.ipynb
+++ b/index.ipynb
@@ -470,7 +470,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
    ]
   },
   {
@@ -493,7 +494,8 @@
     }
    ],
    "source": [
-    "unique_countries"
+    "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
    ]
   },
   {
