--- a/index.ipynb
+++ b/index.ipynb
@@ -466,36 +466,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
-    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
+    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'unique_countries' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-fbd787dcf998>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_countries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'unique_countries' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'Argentina',\n",
+       " 'Canada',\n",
+       " 'Mexico',\n",
+       " 'Italy',\n",
+       " 'South Korea',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Malta',\n",
+       " 'Finland']"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_countries  # ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
-    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] Note: order of countries may be different"
+    "unique_countries  "
    ]
   },
   {
