Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        " 'Malta']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', 'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
+    "unique_countries = ['Croatia', 'USA',\n",
+    " 'Argentina',\n",
+    " 'Mexico',\n",
+    " 'USA',\n",
+    " 'Morocco',\n",
+    " 'USA',\n",
+    " 'Finland',\n",
+    " 'Argentina',\n",
+    " 'Italy',\n",
+    " 'Canada',\n",
+    " 'South Korea',\n",
+    " 'Malta']"
    ]
   },
   {
