Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {
     "scrolled": true
    },
@@ -495,18 +495,21 @@
      "data": {
       "text/plain": [
        "['Croatia',\n",
+       " 'USA',\n",
        " 'Argentina',\n",
-       " 'Canada',\n",
        " 'Mexico',\n",
-       " 'Italy',\n",
-       " 'South Korea',\n",
        " 'USA',\n",
        " 'Morocco',\n",
-       " 'Malta',\n",
-       " 'Finland']"
+       " 'USA',\n",
+       " 'Finland',\n",
+       " 'Argentina',\n",
+       " 'Italy',\n",
+       " 'Canada',\n",
+       " 'South Korea',\n",
+       " 'Malta']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
