Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,8 +439,8 @@
     " 'South Korea', \n",
     " 'Malta', \n",
     " 'Thailand']\n",
-    "countries.pop()\n",
-    "countries"
+    "countries.pop(\"Thailand\")\n",
+    "Cou"
    ]
   },
   {
