Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,12 +470,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia', 'USA',\n",
-    " 'Argentina',\n",
+    "unique_countries = ['Croatia',\n",
     " 'Mexico',\n",
     " 'USA',\n",
     " 'Morocco',\n",
-    " 'USA',\n",
     " 'Finland',\n",
     " 'Argentina',\n",
     " 'Italy',\n",
