--- a/index.ipynb
+++ b/index.ipynb
@@ -525,12 +525,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(unique_countries)-len()\n",
-    "num_of_repeats # 3"
+    "num_of_repeats = len(unique_countries)-len(countries)\n",
+    "num_of_repeats"
    ]
   },
   {
