Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,11 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia',\n",
-    " 'Mexico',\n",
-    " 'USA',\n",
-    " 'Morocco',\n",
-    " 'Finland',\n",
+    "unique_countries = ['Croatia','Mexico','USA','Morocco','Finland',\n",
     " 'Argentina',\n",
     " 'Italy',\n",
     " 'Canada',\n",
