--- a/index.ipynb
+++ b/index.ipynb
@@ -470,10 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia','Mexico','USA','Morocco','Finland',\n",
-    " 'Argentina',\n",
-    " 'Italy',\n",
-    " 'Canada',\n",
+    "unique_countries = ['Croatia','Mexico','USA','Morocco','Finland','Argentina','Italy','Canada',\n",
     " 'South Korea',\n",
     " 'Malta']"
    ]
