Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -470,14 +470,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = ['Croatia','Mexico','USA','Morocco','Finland','Argentina','Italy','Canada',\n",
-    " 'South Korea',\n",
-    " 'Malta']"
+    "unique_countries = ['Croatia','Mexico','USA','Morocco','Finland','Argentina','Italy','Canada','South Korea', 'Malta']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -500,7 +498,7 @@
        " 'Malta']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
