--- a/index.ipynb
+++ b/index.ipynb
@@ -513,22 +513,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "3"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries)-len(countries)\n",
+    "num_of_repeats = len(countries)-len(unique_countries)\n",
     "num_of_repeats"
    ]
   },
